GuiApp step 1: retained tree -> Canvas -> present
First GUI pixels, proving the thesis end to end with no engine changes.

- RetainedNode: the hard-coded tree model (absolute bounds + background,
  corner, border, single-run text), colours/alignment are VexelRay's native
  Color / TextLayout types.
- TreeRenderer.emit: walks the tree depth-first into a native Canvas
  (background, border via fill-then-inset, MSDF text, children on top).
  The whole of the GUI's "rendering" — no Vulkan/shader/vertex code.
- GuiApp: owns the VexelRay wiring (window, device, swapchain, font atlas,
  the Canvas pipeline, a dynamic vertex buffer, WindowedPresenter) and the
  per-frame emit -> upload -> present loop (VexelRay's dynamic-Canvas path).
  Plus a headless capture() via OffscreenDraw for verification.
- Demo: a hard-coded dashboard (title bar, two bordered cards with wrapped
  body text, buttons, footer). Windowed or --capture. Verified both.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>